mincart layout issue on big screens fix

--- a/scss/store/mini-cart.scss
+++ b/scss/store/mini-cart.scss
@@ -1,6 +1,6 @@
 .woocommerce-mini-cart.cart_list {
     list-style: none;
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
 }
 
